[tool.poetry]
name = "repl_python3_Fundamental-Group-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
validators = "^0.18.2"
discord = "^1.7.3"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
#Quickstart = "^0.4"
replit = "^3.2.4"
DiscordUtils = "^1.3.4"
jsonpickle = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
